--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -39,7 +39,7 @@
         Mining may reward apps that have taken steps to further decentralize, such as
         utilizing Gaia storage or the publishing your app to the Blockstack Naming
         System. Test flight apps, hello-world apps and apps created through blockstack tutorials 
-	(e.g. animal kingodom apps) do not qualify.</p>"
+	(e.g. animal kingdom apps) do not qualify.</p>"
       },
       {
         "question":"Does my app have to be listed on App.co to enter App Mining?",
