--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -28,6 +28,7 @@
   - develop/mining_intro
   - develop/mining_enroll
   - develop/vote-blockstack
+  - community/app-miners-guide
   - develop/appMiningFAQ
 
 
