Fixing list styling
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,8 @@ kramdown:
 toc:
   min_level: 2 # default: 1
   max_level: 3 # default: 6
+  list_class: "uk-nav uk-nav-default"
+  sublist_class: "uk-nav-sub doc-nav"
 
 plugins:
   - jekyll-feed
