Adding in the Ios reference
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -32,5 +32,6 @@
   - core/cmdLineRef
   - common/javascript_ref
   - common/android_ref
+  - common/ios_ref
   - common/core_ref
   - core/wire-format
