Add in basic information from Javascript Updates to browser information Creating shared auth between auth and todo Minor updates to the toddo sample
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -3,6 +3,13 @@
   - develop/dapp_principles
   - core/faq_developer
 
+- title: Building Blocks
+- docs:
+  - develop/overview_auth
+  - develop/add_auth
+  - develop/storage
+  - develop/profiles
+
 - title: Try it! Zero to DApp
   docs:
   - develop/zero_to_dapp_1
