Updating app-reviewers details
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -33,6 +33,7 @@
 - title: App Mining
   docs:
   - develop/mining_intro
+  - develop/app-reviewers
   - develop/mining_enroll
   - develop/vote-blockstack
   - community/app-miners-guide
