--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -16,10 +16,10 @@
        expect will evolve and improve over time. We look forward to feedback from our
        community regarding the App Mining process and program. </p>"
      },
-      {
-        "question": "What is the App Mining timeline?",
-        "answer": "<h5>On the first of every month (or as listed on the calendar): </h5> <ul> <li>Registration is closed for that months ranking.</li> <li>Blockstack team sends the complete list of apps to our app reviewer partners. App miners do not need to reach out to Product Hunt, Democracy Earth, or TryMyUI. </li> <li>Blockstack <strong>emails</strong> app miners are emailed about Product Hunt Hunting process. App miners can choose to hunt their app independently or can request to be featured by the Product Hunt the team. <a href='https://docs.blockstack.org/develop/mining_intro.html' target='_blank'>Read more</a>.</li> <li>App miners <strong>debate</strong> on their app in Democracy Earth. <a href='https://docs.blockstack.org/develop/vote-blockstack.html' target='_blank'>Read more</a>.</li><li>Registered stack holders <strong>are alerted</strong> about new apps and prompted to vote. <a href='https://docs.blockstack.org/develop/vote-blockstack.html' target='_blank'>Read more</a>.</li></ul><h5>Over the next two weeks:</h5> <ul> <li>TryMyUI Tests are happening. Please don’t perform upgrades that might break the app.</li> <li>Voters participate on <a href='https://vote.blockstack.org' target='_blank'>vote.blockstack.org</a>. </li> <li>Products are launched on Product Hunt. Product Hunt team performs internal review.</li> </ul> <h5>On the last day of ranking at 11:59pm ET: </h5> <p>App mining results are sent to Blockstack by app reviewer partners.</p> <h5>On the 15th (or as listed on the calendar):</h5> <p>Blockstack team performs App Mining algorithm as referenced <a href='https://blog.app.co/how-app-minings-ranking-algorithm-works/' target='_blank'>here</a>.</p> <h5>On the following weekday:</h5> <ul> <li>App miners are emailed login info to access their TryMyUI tests</li> <li>Full App Mining results are published</li> </ul>"
-        },
+     {
+      "question":"What is the App Mining timeline?",
+      "answer":"<h5>On the first of every month (or as listed on the calendar): </h5> <ul> <li>Registration is closed for that months ranking.</li> <li>Blockstack team sends the complete list of apps to our app reviewer partners. App miners do not need to reach out to Product Hunt, Awario, TryMyUI, or the digital rights reviewer. </li> <li>Blockstack <strong>emails</strong> app miners are emailed about Product Hunt Hunting process. App miners can choose to hunt their app independently or can request to be featured by the Product Hunt team. <a href='https://docs.blockstack.org/develop/app-reviewers.html' target='_blank'>Read more</a>.</li></ul><h5>Over the next two weeks:</h5> <ul> <li>TryMyUI Tests are happening. Please don’t perform upgrades that might break the app.</li> <li>Products are launched on Product Hunt. Product Hunt team performs internal review.</li> <li>The digital rights reviewer examines apps based on the degree to which the apps respect and protect users` fundamental digital rights.</li></ul> <h5>On the last day of ranking at 11:59pm ET: </h5> <p>App mining results are sent to Blockstack by app reviewer partners.</p> <h5>On the 15th (or as listed on the calendar):</h5> <p>Blockstack team performs App Mining algorithm as referenced <a href='https://blog.app.co/how-app-minings-ranking-algorithm-works/' target='_blank'>here</a>.</p> <h5>On the following weekday:</h5> <ul> <li>App miners are emailed login info to access their TryMyUI tests</li> <li>Full App Mining results are published</li> </ul>"
+   },
         {
         "question": "Where can I find a calendar of App Mining events?",
         "answer": "<p>The following calendar shows events each month related to App Mining:</p><p><iframe src='https://calendar.google.com/calendar/b/1/embed?showCalendars=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=blockstack.com_u71ao2dalkd88b493k3671233s%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York' style='border-width:0' width='600' height='400' frameborder='0' scrolling='no'></iframe></p>"
@@ -83,18 +83,10 @@
         out <a href='https://github.com/blockstack/blockstack-ruby'>our Ruby on Rails gem</a>.</p>"
       },
       {
+        "category":"appminers",
         "question":"Who are the app reviewers?",
-        "answer": "<p>App reviewers are currently selected by Blockstack PBC. Reviewers are
-        entities that have a proprietary methodology that helps them make objective
-        judgements for why a certain app might be better than others.  We strive to
-        engage a diverse coalition of app reviewers with the goal of making application
-        ranking objective and resilient to abuse.  </p> <p>As of January 2019, the reviewers were:
-	Product Hunt, Try My UI and Democracy Earth (who
-        uses software to collect votes by Stacks token holders). See <a href='https://docs.blockstack.org/develop/mining_intro.html#how-apps-are-reviewed'>here</a>
-	for more details about each reviewer. Future reviewers could
-        expand to community election. Please see our <a href='https://github.com/blockstack/app-mining'>github
-	repository</a> to raise issues or make suggestions for App Mining. </p>"
-      },
+        "answer":"<p>App reviewers are currently selected by Blockstack PBC. Reviewers are entities that have a proprietary methodology that helps them make objective judgements for why a certain app might be better than others.  We strive to engage a diverse coalition of app reviewers with the goal of making application ranking objective and resilient to abuse.  </p> <p>The app reviewers are Product Hunt, TryMyUI, Awario, and the digital rights reviewer. See <a href='https://docs.blockstack.org/develop/app-reviewers.html'>here</a> for more details about each reviewer. Future reviewers could expand to community election. Please see our <a href='https://github.com/blockstack/app-mining'>GitHub repository</a> to raise issues or make suggestions for App Mining. </p>"
+     },
       {
         "question":"How are apps ranked?",
         "answer": "<p>App reviewers have a proprietary methodology that helps them make
@@ -123,10 +115,6 @@
         your App as well.</p><p>Apps will be hunted every 6 months, so if you hunted
         your app in a past month, as long as you are in the 6 month time window you will
         not have to Hunt the app. </p>"
-      },
-      {
-        "question":"Can developers engage with voters on Democracy Earth?",
-        "answer": "<p>Yes, they can. App miners can and should create an account on Democracy Earth. From this account they can engage with voters through the debate feature. Learn more <a href='https://docs.blockstack.org/develop/vote-blockstack.html' target='_blank'>in the documentation</a>.</p>"
       },
       {
         "question":"When are the winning payments made?",
