Fixes #250 remove voucher holder
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_config.yml
+++ b/_config.yml
@@ -109,6 +109,8 @@ plugins:
   - jekyll-titles-from-headings
   - jekyll-sitemap
   - jekyll-toc
+  - jekyll-redirect-from
+
 
 titles_from_headings:
   enabled:     true
