Initial Smart Contract Docs Includes work in progress menu redesign. Last image pull and update json
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_home.yml
+++ b/_data/navigation_home.yml
@@ -15,8 +15,8 @@
   icon: code
   doc: develop/zero_to_dapp_1
 
-- title: Use the Naming Service
-  desc: Work with namespaces, zone files, and other advanced BNS topics.
+- title: Blockstack Core 
+  desc: Work with our Core node, smart contracts, namespaces, zone files, and other advanced topics.
   icon: cog
   doc: core/naming/introduction
 
