--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -11,6 +11,16 @@
   - core/naming/search
   - core/faq_technical
 
+- title: Clarity Smart Contracts
+  docs:
+  - core/smart/overview
+  - core/smart/principals
+  - core/smart/functions
+  - core/smart/tutorial
+  - core/smart/clarityRef
+  - core/smart/clarityCLI
+  - core/smart/sdk-quickstart
+
 - title: How to use BNS
   docs:
   - core/naming/pickname
