First pass of the new pages Fixing table Fixing typos other things found in review
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -34,6 +34,7 @@
   docs:
   - develop/mining_intro
   - develop/app-reviewers
+  - develop/app-rankings
   - develop/mining_enroll
   - community/app-miners-guide
   - develop/appMiningFAQ
