Updating the content on Wallet
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_org.yml
+++ b/_data/navigation_org.yml
@@ -4,14 +4,13 @@
   - faqs/allFAQS
   - org/token
   - org/explore
-- title: Our Whitepapers
-  docs:
   - org/whitepaper-blockchain
 - title: Manage Stacks
   docs:
   - org/wallet-intro
   - org/wallet-install
   - org/wallet-use
+  - org/wallet-troubleshoot
   - org/tokenholders
 - title: Reference
   docs:
