Adding in new faqs
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -36,6 +36,7 @@
   - develop/app-reviewers
   - develop/app-rankings
   - develop/mining_enroll
+  - develop/mining-rewards
   - community/app-miners-guide
   - develop/appMiningFAQ
 
