--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -19,6 +19,16 @@
   - develop/zero_to_dapp_3
   - develop/zero_to_dapp_4
 
+- title: Stack Blocks Tutorial
+  docs:
+  - develop/stackit/introduction
+  - develop/stackit/authentication
+  - develop/stackit/storage
+  - develop/stackit/radiks
+  - develop/stackit/collections
+  - develop/stackit/contracts
+
+
 - title: Try a tutorial
   docs:
   - browser/hello-blockstack
