--- a/_config.yml
+++ b/_config.yml
@@ -170,7 +170,7 @@ defaults:
     values:
       comments: true
       image: /assets/img/touch-icon.png
-      description: "Using the Blockstack Ecosystem to develop decentralized applications (DApps). "
+      description: "Blockstack Network docs for investors,users, and developers."
 
 collections:
   android:
