--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -9,6 +9,7 @@
   - develop/add_auth
   - develop/storage
   - develop/profiles
+  - develop/betatesting
 
 - title: Try it! Zero to DApp
   docs:
@@ -22,9 +23,9 @@
   - browser/hello-blockstack
   - browser/todo-list
   - browser/blockstack_storage
-  - develop/auth_provider
   - android/tutorial
   - ios/tutorial
+  - develop/auth_provider
   - develop/communityResources
 
 - title: App Mining
