--- a/_data/navigation_usenew.yml
+++ b/_data/navigation_usenew.yml
@@ -6,6 +6,7 @@
 - title: Identity and storage
 - docs:
   - browser/ids-introduction
+  - browser/ids-workit
   - browser/storage-provider
 
 - title: Reference
