--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,11 @@ baseurl:            ""
 # Site base hostname & protocol, e.g. http://example.com
 url:                "https://docs.blockstack.org"
 
-repository: moxiegirl/docs.blockstack
+repository: blockstack/docs.blockstack
 staticman:
   branch: "master"
-# github_editme_path: moxiegirl/docs-new/blob/master
+
+github_editme_path: blockstack/docs-new/blob/master
 # if you're using Github, provide the basepath to the branch you've created for reviews, following the sample here. if not, leave this value blank.
 
 
@@ -178,28 +179,19 @@ collections:
     basepath: "blockstack/blockstack-android/blob/master/docs"
   community:
     output: true
-    basepath:  "moxiegirl/docs.blockstack"
   core:
     output: true
-    basepath:  "moxiegirl/docs.blockstack"
   develop:
     output: true
-    basepath: "moxiegirl/docs.blockstack"
   storage:
     output: true
-    basepath: "moxiegirl/docs.blockstack"
   browser:
     output: true
-    basepath:  "moxiegirl/docs.blockstack"
   ios:
     output: true
-    basepath: "blockstack/blockstack-ios/blob/master/docs"
   common:
     output: true
-    basepath: "moxiegirl/docs.blockstack"
   org:
     output: true
-    basepath: "moxiegirl/docs.blockstack"
   faqs:
     output: true
-    basepath: "moxiegirl/docs.blockstack"
