Added steps for granting read permission to space Carries and closes #426
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_storage.yml
+++ b/_data/navigation_storage.yml
@@ -9,6 +9,7 @@
   docs:
   - storage/hub-operation
   - storage/amazon-s3-deploy
+  - storage/digital-ocean-deploy
   - storage/hello-hub-choice
   - storage/gaia-admin
 
