Fixes #32 for deploying an app
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -10,6 +10,7 @@
   - develop/storage
   - develop/profiles
   - develop/collections
+  - develop/deploy-tips
   - develop/betatesting
 
 - title: Try it! Zero to DApp
