Adding radiks to the docs Adding in base radiks files Work in progress
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -16,6 +16,14 @@
   docs:
   - develop/collections
   - develop/collection-type
+  
+- title: Sharing data
+  docs: 
+  - develop/radiks-intro
+  - develop/radiks-setup
+  - develop/radiks-models
+  - develop/radiks-collaborate
+  - develop/radiks-server-extras
 
 - title: Try it! Zero to DApp
   docs:
