Adding in copy check
Signed-off-by: Mary Anthony <mary@blockstack.com>

--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -17,7 +17,7 @@
   - develop/collections
   - develop/collection-type
   
-- title: Sharing data
+- title: Radiks data 
   docs: 
   - develop/radiks-intro
   - develop/radiks-setup
