--- a/_data/navigation_learn.yml
+++ b/_data/navigation_learn.yml
@@ -12,6 +12,12 @@
   - develop/deploy-tips
   - android/tutorial
   - ios/tutorial
+
+- title: Connect
+  docs:
+  - develop/connect/overview
+  - develop/connect/get-started
+  - develop/connect/use-with-clarity
   
 - title: Data sharing & collaboration
   docs: 
