--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -2,6 +2,7 @@
   docs:
   - core/smart/overview
   - core/smart/tutorial
+  - core/smart/tutorial-counter
   - core/smart/principals
   - core/smart/functions
   - core/smart/clarityRef
