Adding thirs tutorial boilerplate

--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -3,6 +3,7 @@
   - core/smart/overview
   - core/smart/tutorial
   - core/smart/tutorial-counter
+  - core/smart/tutorial-token
   - core/smart/principals
   - core/smart/functions
   - core/smart/clarityRef
