--- a/_data/navigation_core.yml
+++ b/_data/navigation_core.yml
@@ -1,4 +1,15 @@
-- title: Overview
+- title: Smart Contracts
+  docs:
+  - core/smart/overview
+  - core/smart/tutorial
+  - core/smart/tutorial-counter
+  - core/smart/principals
+  - core/smart/functions
+  - core/smart/clarityRef
+  - core/smart/clarityCLI
+  - core/smart/sdk-quickstart
+  
+- title: Naming Services
   docs:
   - core/naming/introduction
   - core/naming/architecture
@@ -10,16 +21,6 @@
   - core/naming/tutorial_subdomains
   - core/naming/search
   - core/faq_technical
-
-- title: Clarity Smart Contracts
-  docs:
-  - core/smart/overview
-  - core/smart/principals
-  - core/smart/functions
-  - core/smart/tutorial
-  - core/smart/clarityRef
-  - core/smart/clarityCLI
-  - core/smart/sdk-quickstart
 
 - title: How to use BNS
   docs:
