--- a/_data/appFAQ.json
+++ b/_data/appFAQ.json
@@ -1,91 +1,11 @@
-{  "faqs": [
-   {
-      "question":"What is App Mining?",
-      "answer":"<p>Traditionally the term mining in cryptocurrency refers to the process of contributing compute resources to the network and earning a reward. In the Blockstack Ecosystem, instead of just mining through computation, developers mine by building apps and the Blockstack community funds them simply for being pioneers in the emerging Blockchain software market.</p> <p>We believe app mining represents a revolution in app funding, allowing small teams to bootstrap without advertising or venture capital. Each month, qualifying apps compete for funding. Qualified apps are evaluated and ranked by expert app reviewers. The better your app, the higher payout you earn.</p> <p>The pilot run began on December 1st 2018, with 34 Blockstack Apps enrolled. A previous alpha run in Oct 2018 included 17 Blockstack apps. App mining is a new mining model that we expect will evolve and improve over time. We look forward to feedback from our community regarding the App Mining process and program.</p>"
+{
+   "faqs": [{
+         "question": "What is the Stacks token?",
+         "answer": "<p>Stacks (STX) token is the native utility token of the Blockstack network and the only token currently available as part of an SEC-qualified sale. Stacks tokens are consumed as &quot;fuel&quot; when users register digital assets, like usernames, or when they register/execute smart contracts. Using Stacks, developers can build and distribute apps that let users maintain ownership of their data and protect their digital rights.</p> <p>Learn more at: <a href='https://stackstoken.com/faq/' target='_blank'>https://stackstoken.com/faq/</a></p>"
       },
-   {   
-         "question":"Is App Mining internationally accesible?",
-         "answer":"<p>Yes, App Mining is internationally available. The reviewers today cater to an English-speaking audience. The long term vision for app mining entails developing a plan to make it more internationally accessible. We will continue to update the guidelines and FAQ as the program evolves.</p>"
-   },
-   {
-      "question": "What is the App Mining timeline?",
-      "answer":"<p>On the first of every month (or as listed on the calendar):</p> <ul> <li>Registration is closed for that months ranking.</li> <li>Blockstack team sends the complete list of apps to our app reviewer partners. App miners do not need to reach out to Awario, TryMyUI, or the digital rights reviewer.</li></ul> <p>Over the next two weeks:</p> <ul> <li>TryMyUI Tests are happening. Please don’t perform upgrades that might break the app.</li><li>The digital rights reviewer examines apps based on the degree to which the apps respect and protect users` fundamental digital rights.</li> </ul> <p>On the last day of ranking at 11:59pm ET: App mining results are sent to Blockstack by app reviewer partners.</p> <p>On the 15th (or as listed on the calendar): Blockstack team performs App Mining algorithm as referenced <a href='https://blog.app.co/how-app-minings-ranking-algorithm-works/' target='_blank'>here</a>.</p> <p>On the following weekday:</p> <ul> <li>App miners are emailed login info to access their TryMyUI tests. </li> <li>App founders are sent an audit version of the results. </li> </ul> <p>A week later: </p> <ul> <li>Payouts are completed. </li> <li>Full App Mining results are published. </li> </ul>"
-   },
-   {
-      "question": "Where can I find a calendar of App Mining events?",
-      "answer": "<p>The following calendar shows events each month related to App Mining:</p><p><iframe src='https://calendar.google.com/calendar/b/1/embed?showCalendars=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=blockstack.com_u71ao2dalkd88b493k3671233s%40group.calendar.google.com&amp;color=%235229A3&amp;ctz=America%2FNew_York' style='border-width:0' width='600' height='400' frameborder='0' scrolling='no'></iframe></p>"
-   },
-   {
-      "question": "How much can I earn and how are rewards distributed? ",
-      "answer":"<p>App Mining pays out $400k per month in combined STX and BTC January 2020. In February 2020, the payout pool will ramp up to $500k total in STX. In March and April 2020, the monthly payout pool will be $700k. In May 2020 we plan for the monthly payout to be $1M worth of Stacks tokens. For more detailed information, see <a href='https://docs.blockstack.org/develop/mining-rewards.html' target='_blank'>How payouts are administered</a> in the Blockstack documentation.</p>"     
-   },
-   {
-      "question":"What is the Stacks token?",
-      "answer":"<p>Stacks (STX) token is the native utility token of the Blockstack network and the only token currently available as part of an SEC-qualified sale. Stacks tokens are consumed as &quot;fuel&quot; when users register digital assets, like usernames, or when they register/execute smart contracts. Using Stacks, developers can build and distribute apps that let users maintain ownership of their data and protect their digital rights.</p> <p>Learn more at: <a href='https://stackstoken.com/faq/' target='_blank'>https://stackstoken.com/faq/</a></p>"
-  },
-   {
-      "question": "How is App Mining different from cryptocurrency mining?",
-      "answer": "<p>Traditionally the term mining in cryptocurrency refers to the process of contributing compute resources to the network and earning a distributed of new tokens as a reward. On the Stacks blockchain, developers can <q>mine</q> by contributing apps to the ecosystem and making applications the community wants. </p>"
-   },
-   {
-      "question": "What qualifies my app to compete in App Mining?",
-      "answer": "<p>Your app should integrate Blockstack authentication for logging into your app. Your finished app should be available to the public for use.  The application must use a registered domain name and the app should be hosted at a URL belonging to the domain. The app website must use a secured (<code>https</code>) connection. In the future, App Mining may reward apps that have taken steps to further decentralize, such as utilizing Gaia storage or the publishing your app to the Blockstack Naming System. Test flight apps, hello-world apps and apps created through blockstack tutorials (e.g., animal kingdom apps) do not qualify.</p>"
-   },
-   {
-      "question": "Does my app have to be listed on App.co to enter App Mining?",
-      "answer": "<p>Yes, it does.</p>"
-   },
-   {
-      "question": "How do I submit my application for App Mining?",
-      "answer": "<p>Complete <a href='https://app.co/submit#'>the submission form on App.co</a>. Blockstack suggests registering several days before the ranking deadline — our team needs to verify your details to ensure your app qualifies. Full enrollment details can be found <a href='https://docs.blockstack.org/develop/mining_enroll.html' target='_blank'>here</a>. When you have met all the requirements, you should see your app listed <a href='https://app.co/mining/apps'>on this page</a>.</p>"
-   },
-   {
-      "question": "When are my submission materials due?",
-      "answer": "<p>Your submission materials are due before the end of the month. Please see the <a href='https://app.co/mining#where-can-i-find-a-calendar-of-app-mining-events' target='_blank'>app mining calendar</a> for the exact dates. Keep in mind that registering is a multi-step process.</p>"
-   },
-   {
-      "question": "How often can I submit my application for App Mining?",
-      "answer": "<p>You need only to submit your application once.  Each month after your submission, your app is competing in App Mining.  </p>"
-   },
-   {
-      "question": "Does my code repository need to be public?",
-      "answer": "<p>Your application code can be public or private.</p>"
-   },
-   {
-      "question": "Is Blockstack Auth difficult to integrate?",
-      "answer": "<p>If you’re already building your app with JavaScript, adding Blockstack authentication is easy! We have docs, tutorials, and thorough API references for you to learn from. Visit the <a href='https://docs.blockstack.org/develop/zero_to_dapp_1.html'> Zero-to-Dapp tutorial</a> for end-to-end training. Or <a href='https://docs.blockstack.org/develop/auth_provider.html'>use this short example</a>.</p> <p>If you’re developing a traditional server-side application, you can still take advantage of Blockstack authentication. For an example, check out <a href='https://github.com/blockstack/blockstack-ruby'>our Ruby on Rails gem</a>.</p>"
-   },
-   {
-      "question": "Who are the app reviewers?",
-      "answer":"<p>App reviewers are currently selected by Blockstack PBC. Reviewers are entities that have a proprietary methodology that helps them make objective judgements for why a certain app might be better than others. We strive to engage a diverse coalition of app reviewers with the goal of making application ranking objective and resilient to abuse.</p> <p>The app reviewers are TryMyUI, Awario, and the New Internet Labs. See <a href='https://docs.blockstack.org/develop/app-reviewers.html' target='_blank'>here</a> for more details about each reviewer. Future reviewers could expand to community election. Please see our <a href='https://github.com/blockstack/app-mining' target='_blank'>GitHub repository</a> to raise issues or make suggestions for App Mining.</p>"
-   },
-   {
-      "question": "How are apps ranked?",
-      "answer":"<p>App reviewers have a proprietary methodology that helps them make objective judgments for why one app might be better than another. Each app reviewers determines the data, formula, and personnel they wish to utilize. Reviewers must publish their methodology periodically to ensure transparency.</p> <p>To learn more see <a href='https://docs.blockstack.org/develop/app-reviewers.html' target='_blank'>the detailed explanation of our ranking algorithm on our</a> <a href='https://docs.blockstack.org/develop/app-reviewers.html' target='_blank'>documentation</a>.</p> <p>Apps are ranked by all app reviewers.</p>"
-   },
-   {
-      "question": "When are the winning payments made?",
-      "answer": "<p>Payouts are made mid-month.</p>"
-   },
-   {
-      "question": "What are examples of any quantitative metrics that may be shared with app reviewers?",
-      "answer": "<p>Qualitative metrics are metrics that evaluate elements such as engagement, DAU/MAU ratios, etc. from the reviewed apps. Blockstack plans to incorporate metrics based ranking. However, before we do, any mechanism must thoughtfully incorporate the digital privacy rights of Blockstack users, and provide information in a way that cannot be gamed.</p> "
-   },
-   {
-      "question": "Is App Mining Decentralized?",
-      "answer": "<p>Given the pioneering nature of the program, we are being careful and starting in a somewhat centralized fashion that allows for necessary diligence in the early stages, for example, the current pilot phase. We don’t want to bake in assumptions that have not been validated. The downside of this protection is some level of centralization, which we are taking steps to reduce over time. The pilot is the just the first step in creating a fair system that can be relied upon by founders and contribute to the growth of the Blockstack ecosystem. </p> <p>Blockstack plans to move along a path to decentralization and App Mining will too. It is important to highlight that initially, App Mining will purposely have a few points of centralization highlighted below, which can become decentralized over time (all plans are subject to change, legal approval, and applicable law). </p> <h5>Electing app reviewers:</h5> <p>Currently, Blockstack PBC elects app reviewers. In the future, we anticipate gradually transitioning to community elections of App Reviewers. </p> <h5>Registering apps:</h5> <p>Currently, registering apps is regulated by Blockstack PBC through app.co/mining. In the future, we anticipate transitioning to publishing on designated Blockstack namespaces via our public blockchain. </p> <h5>Collecting votes:</h5> <p>Currently, votes are aggregated by Blockstack PBC and administered via App.co. In the future, we expect that votes will be collected through the protocol itself. </p> <h5>Issuing money:</h5> <p>Currently, payouts are issued by Blockstack PBC. In the future, we expect that payouts will over time be generated and deployed on an automated basis. </p>"
-   },
-   {
-      "question": "How is App Mining protected against bribery, collusion, or gaming?",
-      "answer": "<p>We are taking potential threats very seriously and hope to create a fair system that continuously reinforces trust within our community for the long term. </p> <p>We are currently consulting with a team of 3 Ph.D. Game Theorist professors from Princeton University and New York University to determine thoughtful methods to protect App Mining from being attacked and/or abused. Our goal is to be as transparent as possible, but App Reviewers may reserve the right to keep some secrets in their formula to avoid bribes and gaming, and the algorithm that combines all of these score may be tuned in the future to account for new learnings. </p> <p>The Game Theorists are working with us to create a technical paper and broader documents like blogs explaining the overall mechanism.</p>"
-   },
-   {
-      "question": "How do I propose and follow changes to App Mining?",
-      "answer": "<p>The App Mining <a href='https://github.com/blockstack/app-mining' target='_blank'>GitHub repo</a> is the best place to propose changes to App Mining. </p>"
-   },
-   {
-      "question": "App Mining Disclaimer",
-      "answer": "<p><i>The App Mining FAQs contain forward-looking statements, including statements regarding Blockstack PBC’s plans for its App Mining program. Forward-looking statements are subject to risks and uncertainties that could cause actual results to differ materially, and reported results should not be considered as an indication of future performance. Potential risks and uncertainties that could change our actual results include, but are not limited to, risks associated with: the failure of App Mining Program to successfully incentivize the development of applications for the Blockstack network; risks associated with attacks designed to influence the App Reviewers or game their methodologies; technical difficulties in the transition from a centralized to a decentralized administration of the program. These forward-looking statements speak only as of the date hereof. Blockstack PBC disclaims any obligation to update these forward-looking statements. </i></p> <p><i>Any decisions that may be made through the App Mining Program regarding rewards provided to app developers are not recommendations as to the quality of any investments that individuals may make in a company that receives rewards. If you are considering an investment in any of these companies, you should make your own decision regarding that investment and not rely in any way on the results of the App Mining program. </i></p>"
-   }
- ]
+      {
+         "question": "Is Blockstack Auth difficult to integrate?",
+         "answer": "<p>If you’re already building your app with JavaScript, adding Blockstack authentication is easy! We have docs, tutorials, and thorough API references for you to learn from. Visit the <a href='https://docs.blockstack.org/develop/zero_to_dapp_1.html'> Zero-to-Dapp tutorial</a> for end-to-end training. Or <a href='https://docs.blockstack.org/develop/auth_provider.html'>use this short example</a>.</p> <p>If you’re developing a traditional server-side application, you can still take advantage of Blockstack authentication. For an example, check out <a href='https://github.com/blockstack/blockstack-ruby'>our Ruby on Rails gem</a>.</p>"
+      }
+   ]
 }
